--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -46,3 +46,22 @@ li {
 
 
 /* Sales Data Specific */
+
+table, td , th {
+  border : 1px solid black;
+}
+
+table {
+  margin: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
+td, th {
+  padding: 1rem;
+}
+
+thead th{
+  font-weight: bold;
+}
