--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,6 +1,5 @@
 body {
   background-color: #999491;
-  font-family: Georgia;
 }
 
 main{
@@ -24,7 +23,7 @@ img {
 h1, h2 ,h3 ,h4 ,h5, h6 {
   margin: auto;
   text-align: center;
-  font-family: sans-serif;
+  font-family: 'Inter' sans-serif;
 
 }
 
